2010-09-17  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Jon Honeycutt.

        The colors on the new build.webkit.org (after upgrading the master to 0.8.1) are
        slightly harder to read, so this reverts the previous background colors for various
        states, making it easier to read.

        * BuildSlaveSupport/build.webkit.org-config/public_html/default.css:
        (.success):
        (.failure):
        (.warnings):
        (.exception):
        (.start,.running,td.building):
        (.offline,td.offline):

2010-09-17  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r67692.
        http://trac.webkit.org/changeset/67692
        https://bugs.webkit.org/show_bug.cgi?id=46011

        broke layout test dashboard (Requested by johnny_g on
        #webkit).

        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2010-09-17  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Oliver Hunt.

        Style bot complains about cairo forward declaration naming
        https://bugs.webkit.org/show_bug.cgi?id=45867

        Exclude Cairo forward declarations from indentifiers with underscores checks.

        * Scripts/webkitpy/style/checkers/cpp.py: Add exclusion for Cairo forward-declarations.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Add some tests for this.

2010-09-16  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Ojan Vafai.

        Include detailed test modifiers (e.g. FLAKY) in results.json for failing non-layout tests
        https://bugs.webkit.org/show_bug.cgi?id=45408

        This change also tries to remove duplicated upload_results_json methods
        in run_webkit_tests.py and json_results_generator.py.

        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py: